--- a/estilos.css
+++ b/estilos.css
@@ -9,16 +9,16 @@ body {
  }
 
 .sacola {
-   background: url(../img/sacola.png) no-repeat top right;
+    background: url(../img/sacola.png) no-repeat top right;
 
-   font-size: 14px;
-   padding-right: 40px;
-   text-align: right;
-   width: 140px;
+    font-size: 14px;
+    padding-right: 40px;
+    text-align: right;
+    width: 140px;
     padding-top: 8px;
     position: absolute;
-   top: 0;
-   right: 0;
+    top: 0;
+    right: 0;
     
  }
 
@@ -45,5 +45,145 @@ header {
    bottom: 0;
    right: 0;
  }
+
+.busca, 
+ .menu-departamentos {
+   background-color: #dcdcdc;
+   font-weight: bold;
+   text-transform: uppercase;
+
+   margin-right: 10px;
+   width: 230px;
+ }
+
+.busca h2,
+ .busca form,
+ .menu-departamentos h2 {
+   padding: 10px;
+ }
+
+.menu-departamentos li {
+   background-color: white;
+   margin-bottom: 1px;
+   padding: 5px 10px;
+ }
+
+.menu-departamentos a {
+   color: #333333;
+   text-decoration: none;
+ }
+
+ .busca input {
+     vertical-align: middle;
+ }
+
+.busca input[type=search] {
+     width: 170px;
+ }
+
+.destaque {
+   margin-top: 10px;
+   display: flex;
+   
+ }
+.paineis {
+    display: flex;
+    justify-content: center;
+}
+
+.painel {   
+    margin: 10px 0;
+    padding: 10px;
+}
+.novidades {
+    flex:1;
+}
+
+.mais-vendidos {
+    flex: 1;
+}
+
+.painel ol{
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    margin: 0 auto;
+}
+
+.painel li {
+  width: 140px;
+   margin: 2px;
+   padding-bottom: 10px;
+}
+
+/* estilização do painel novidades e vendios*/
+painel h2 {
+   font-size: 24px;
+   font-weight: bold;
+   text-transform: uppercase;
+
+   margin-bottom: 10px;
+}
+
+.painel a {
+   color: #333;
+   font-size: 14px;
+   text-align: center;
+   text-decoration: none;
+ }
+
+ .novidades {
+   background-color: #f5dcdc;
+ }
+
+ .mais-vendidos {
+   background-color: #dcdcf5;
+ }
+
+/*****************/
+/* footer */
+
+footer {
+   background-image: url(../img/fundo-rodape.png);
+    padding: 20px 0;
+}
+
+.social a {
+   /* tamanho da imagem */
+   height: 32px;
+   width: 32px;
+
+   /* image replacement */
+   display: block;
+   text-indent: -9999px;  
+ }
+
+ .social a[href*="facebook.com"] {
+   background-image: url(../img/facebook.png);
+ }
+
+ .social a[href*="twitter.com"] {
+   background-image: url(../img/twitter.png);
+ }
+
+ .social a[href*="plus.google.com"] {
+   background-image: url(../img/googleplus.png);
+ }
+
+.socialPainel{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.social {
+    display: flex;
+    
+}
+.social li {
+    margin-left: 25px;
+    margin: auto 0px auto 25px;;
+}
+
 
 
