--- a/sobre.css
+++ b/sobre.css
@@ -4,9 +4,13 @@ body {
     color: #333333;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     text-align: justify;
-    margin: 0 auto;
-    width: 940px;
+    
  }
+
+.container {
+    width: 940px;
+    margin: 0 auto;
+}
 
  h1 {
      background-image: url(../img/sobre-background.jpg);
@@ -70,4 +74,50 @@ ul li {
  #familia {
      float: right;
      margin: 0 0 10px 10px;
+}
+
+/*******************/
+/** footer**/
+
+footer {
+   background-image: url(../img/fundo-rodape.png);
+    padding: 20px 0;
+    
+}
+
+.social a {
+   /* tamanho da imagem */
+   height: 32px;
+   width: 32px;
+
+   /* image replacement */
+   display: block;
+   text-indent: -9999px;  
+ }
+
+ .social a[href*="facebook.com"] {
+   background-image: url(../img/facebook.png);
+ }
+
+ .social a[href*="twitter.com"] {
+   background-image: url(../img/twitter.png);
+ }
+
+ .social a[href*="plus.google.com"] {
+   background-image: url(../img/googleplus.png);
+ }
+
+.socialPainel{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.social {
+    display: flex;
+    
+}
+.social li {
+    margin-left: 25px;
+    margin: auto 0px auto 25px;;
 }
